[package]
name = "cron"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "~1.0"
chrono = "~0.4"
env_logger = "~0.11"
log = "~0.4"
reqwest = { version = "~0.12", features = ["json"] }
serde_json = "~1.0"
sqlx = { version = "~0.8", features = ["runtime-tokio", "tls-rustls-ring-webpki", "postgres", "bigdecimal"] }
tokio = { version = "~1.46", features = ["full"] }
