[package]
name = "cron"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "~1.0"
chrono = "~0.4"
env_logger = "~0.11"
futures = "~0.3"
log = "~0.4"
once_cell = "~1.21"
panic-message = "0.3.0"
prometheus_exporter = { version = "~0.8", default-features = false, features = ["logging"] }
reqwest = { version = "~0.12", default-features = false, features = ["json", "rustls-tls"] }
serde_json = "~1.0"
sqlx = { version = "~0.8", features = ["runtime-tokio", "tls-rustls-ring-webpki", "postgres", "bigdecimal"] }
tokio = { version = "~1.46", features = ["macros", "rt-multi-thread", "time", "signal"] }
