[package]
name = "cron"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "~1.0"
chrono = "~0.4"
env_logger = "~0.11"
futures = "~0.3"
itertools = "~0.14"
log = "~0.4"
metrics = "~0.24"
metrics-exporter-prometheus = "~0.17"
num-traits = "~0.2"
once_cell = "~1.21"
panic-message = "~0.3"
reqwest = { version = "~0.12", default-features = false, features = ["json", "rustls-tls"] }
serde_json = "~1.0"
sqlx = { version = "~0.8", features = ["runtime-tokio", "tls-rustls-ring-webpki", "postgres", "bigdecimal", "chrono"] }
tokio = { version = "~1.46", features = ["macros", "rt-multi-thread", "time", "signal"] }
